--- a/index.css
+++ b/index.css
@@ -119,7 +119,15 @@ background-size: auto;
 }
 
 .image:before{
-position:fixed;
+  position: fixed;
+    margin-top: 10px;
+  margin-bottom: 10px;
+  /*position: relative;*/
+  background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(pic.jpg);
+/*background-image: url("pic.jpg");*/
+background-attachment: fixed;
+background-repeat: repeat;
+background-size: auto;
 }
 
 .inner_img{
