--- a/index.css
+++ b/index.css
@@ -328,7 +328,6 @@ padding: 20px;
   margin-bottom: 10px;
   position: relative;
   background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(pic.jpg);
-/*background-image: url("pic.jpg");*/
 background-attachment: fixed;
 background-repeat: repeat;
 background-size: auto;
@@ -445,6 +444,12 @@ height: 140px;
 
 .references{
   margin-top: 30px;
+}
+
+.refences h4{
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 20px;
 }
 
 .subscribe{
