--- a/index.css
+++ b/index.css
@@ -446,7 +446,7 @@ height: 140px;
   margin-top: 30px;
 }
 
-.refences h4{
+.references h4{
   text-align: center;
   margin-bottom: 40px;
   font-size: 20px;
